--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info mb-4">
+    <nav class="navbar navbar-expand-md navbar-dark my-1">
         <a href="#" class="navbar-brand">Home</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
             <span class="navbar-toggler-icon"></span>
@@ -45,5 +45,41 @@
             </ul>
         </div>
     </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="product_container">
+                        <img src="images/portobello.jpg" alt="portobello" class="product_image">
+                    <div class="product_descrip">
+                        Yet another type of agaricus bisporus, 
+                        the portobello is the oldest variety of the three featured here. While they were once only imported from Italy, they now grow all over the United States. Thanks to their large size and meaty flavor, they can be swapped in for meat on pretty much anything—sandwiches, 
+                        pizza, pasta sauces, omelettes, and more!
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="product_container">
+                        <img src="images/clamshell.jpg" alt="clamshell" class="product_image">
+                    <div class="product_descrip">
+                        Yet another type of agaricus bisporus, 
+                        the portobello is the oldest variety of the three featured here. While they were once only imported from Italy, they now grow all over the United States. Thanks to their large size and meaty flavor, they can be swapped in for meat on pretty much anything—sandwiches, 
+                        pizza, pasta sauces, omelettes, and more!
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="product_container">
+                        <img src="images/cremini.jpg" alt="cremini" class="product_image">
+                    <div class="product_descrip">
+                        Yet another type of agaricus bisporus, 
+                        the portobello is the oldest variety of the three featured here. While they were once only imported from Italy, they now grow all over the United States. Thanks to their large size and meaty flavor, they can be swapped in for meat on pretty much anything—sandwiches, 
+                        pizza, pasta sauces, omelettes, and more!
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
