--- a/index.html
+++ b/index.html
@@ -106,27 +106,30 @@
                   <div>Contact Us</div>
                   <p>9629794726 , 8124590252</p>
             </div>
-
+            <hr>
             <div>
                 <div>Community</div>
                 <div>
-                    <a href="">
+                    <a href="" class="community">
                         <i class="fa fa-whatsapp" style="font-size:25px;color:green"></i>
                     </a>
-                    <a href="https://www.instagram.com/blue__heart__jaga/" target="blank">
+                    <a href="https://www.instagram.com/blue__heart__jaga/" class="community" target="blank">
                         <i class="fa fa-instagram" style="font-size:25px;color:orange"></i>
                     </a>
-                    <a href="https://jagan0143.github.io/blueheart/" target="blank">
+                    <a href="https://jagan0143.github.io/blueheart/" class="community" target="blank">
                         <i class="fa fa-google" style="font-size:25px;color:blue"></i>
                     </a>
-                    <a href="https://www.youtube.com/watch?v=ze4om166ru8" target="blank">
+                    <a href="https://www.youtube.com/watch?v=ze4om166ru8" class="community" target="blank">
                         <i class="fa fa-youtube" style="font-size:25px;color:red"></i>
                     </a>
                 </div>
             </div>
         </div>
-
-
     </div>
+
+    <footer class="foot">
+        <p>Copyright JWebs &copy; 2017</p>
+    </footer>
+    <div style="height: 2000px;"></div>
 </body>
 </html>
